@@ -7,6 +7,13 @@ VV (https://www.creatis.insa-lyon.fr/rio/vv). Lasagna was originally written in 
 laboratory, Basel, by Rob Campbell.
 
 
+2019/06/27
+- Rob Campbell
+Improve display of ingredients in list. 
+Elastix plugin no longer crashes if the user presses "cancel" instead of loading a stack. 
+Elastix and Transformix plugins allow loading of TIFF stacks.
+
+
 
 2019/06/27
 - Rob Campbell
